--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@pokedex/pokemon2-ui": "https://github.com/JohnGarciaDev15/pokemon2-ui.git#master",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "cells-app-template": "^6.0.0",
-    "lit-element": "^2.0.0"
+    "lit-element": "^2.0.0",
+    "@cells/cells-page": "^1.6.0"
   },
   "devDependencies": {
     "@cells/cells-component-core": "^3.2.0"
